Fix alignment of aggregate generation values: alignment-baseline is not supported on <text> elements (at least, in Firefox).

--- a/nz/cqs/cqs.css
+++ b/nz/cqs/cqs.css
@@ -225,7 +225,6 @@ svg {
 .chart g.agg-gen text {
 	text-anchor: middle;
 	font-weight: bold;
-	alignment-baseline: text-before-edge;
 	fill: #1B7D30;
 }
 
